added some code

--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
     <!-- man Jacket end -->
 
     <!-- Shopping section start -->
-    <section class="grid grid-cols-1 md:grid-cols-2 gap-5">
-        <div class="order-2 md:order-1 bg-slate-200 h-32 flex p-6 rounded-2xl shadow-2xl">
+    <section class="grid grid-cols-1 md:grid-cols-2 gap-5 mb-28">
+        <div class="order-2 md:order-1 bg-slate-200 h-32 flex p-6 rounded-2xl shadow-2xl ">
             <img class="h-20 w-20" src="images/house.png" alt="">
             <div>
                 <h3 class="text-2xl font-semibold">Find the Perfect</h3>
